# fist-sampler

./: .gitignore  .gitmodules  CMakeLists.txt  CooperFryeSampler.cpp  CooperFryeSampler.cxx  CooperFryeSamplerConfig.h.in  FistSampler.cpp  FistSamplerConfig.h.in  README.md
include/: CooperFryeSamplerHelperFunctions.h  CooperFryeSamplerParameters.h  FistSamplerHelperFunctions.h  FistSamplerParameters.h  HypersurfaceReader.h
input/: get_MUSIC_input_RHICBES.sh  input.ALICE.PbPb.2760.C0-5  input.ALICE.PbPb.2760.C0-5.EVHRG  input.AuAu.200.C0-5  input.AuAu.200.C0-5.EVHRG  input.AuAu.7.7  input.AuAu.7.7.C0-5  input.AuAu.7.7.C0-5.EVHRG  input.AuAu.7.7.C70-80  input.AuAu.7.7.C70-80.EVHRG  input.HADES.AuAu.2.4.C0-5  input.HADES.AuAu.2.4.C0-5.EVHRG
tasks/: FreezeoutMap.cpp
tasks/BESFluctuations/: BES-alphas-KpLaQ.cpp  CMakeLists.txt
tasks/Dmeasure/: CMakeLists.txt  DmeasureCalculationLHC.cpp
tasks/Dmeasure/input/: input.BQS.ALICE.PbPb.5020.C0-5.EVHRG.ALICEBW  input.BQS.ALICE.PbPb.5020.C0-5.EVHRG.ALICEBW.full  input.GCE.ALICE.PbPb.2760.C0-5 copy.EVHRG  input.GCE.ALICE.PbPb.2760.C0-5.EVHRG  input.GCE.ALICE.PbPb.2760.C0-5.EVHRG.ALICEBW  input.GCE.ALICE.PbPb.2760.C0-5.EVHRG.full  input.GCE.ALICE.PbPb.5020.C0-5.EVHRG.ALICEBW  input.GCE.ALICE.PbPb.5020.C0-5.EVHRG.ALICEBW.full  input.QCE.ALICE.PbPb.5020.C0-5.EVHRG.ALICEBW  input.QCE.ALICE.PbPb.5020.C0-5.EVHRG.ALICEBW.full
tasks/MeanPt/: CMakeLists.txt  MeanPtCalculation.cpp  MeanPtFluctuations.cpp
tasks/MeanPt/input/: input.STAR.AuAu.3GeV.C0-5
